--- a/hobbies.html
+++ b/hobbies.html
@@ -1,176 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hobbies & Interests - Nawon Lee</title>
-  <link rel="shortcut icon" href="Icons/nl-logo.png" type="image/png">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-  <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
+import React from "react";
 
-  <style>
-    .content {
-      text-align: center;
-      padding: 3rem 1rem;
-    }
+const HobbiesGallery = () => {
+  const hobbies = [
+    {
+      title: "Hiking & Nature",
+      description:
+        "Weekend hikes through trails around New England remind me to pause, breathe, and notice the quiet details—sunlight, rhythm, and balance.",
+      image: "/images/hiking.jpg",
+    },
+    {
+      title: "Piano",
+      description:
+        "I play classical and contemporary pieces, often late at night. It’s where structure meets emotion, and repetition feels like meditation.",
+      image: "/images/piano.jpg",
+    },
+    {
+      title: "Photography",
+      description:
+        "I love documenting fleeting light—faces, streets, and still moments. It’s how I train myself to see people and places with patience and care.",
+      image: "/images/photography.jpg",
+    },
+  ];
 
-    h1 {
-      margin-bottom: 2.5rem;
-    }
+  return (
+    <section className="max-w-6xl mx-auto px-4 py-12">
+      <h2 className="text-3xl font-semibold mb-10 text-center">
+        Beyond the Lab
+      </h2>
 
-    .slider {
-      position: relative;
-      overflow: hidden;
-      width: 100%;
-      max-width: 650px;
-      margin: 0 auto;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-    }
-
-    .slides {
-      display: flex;
-      transition: transform 0.4s ease-in-out;
-    }
-
-    .slide {
-      min-width: 100%;
-      box-sizing: border-box;
-    }
-
-    .slide img {
-      width: 100%;
-      height: auto;
-      display: block;
-      border-radius: 8px;
-    }
-
-    .caption {
-      text-align: center;
-      margin-top: 0.75rem;
-      display: block;
-    }
-
-    /* Match the site's text hierarchy */
-    .caption .text.body {
-      font-size: 0.95rem;
-      color: var(--accent-color, #444);
-      line-height: 1.5;
-    }
-
-    .nav {
-      position: absolute;
-      top: 50%;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      transform: translateY(-50%);
-      z-index: 2;
-    }
-
-    .nav button {
-      background: rgba(0, 0, 0, 0.3);
-      border: none;
-      color: #fff;
-      font-size: 1.8rem;
-      padding: 0.4rem 0.8rem;
-      cursor: pointer;
-      border-radius: 6px;
-      transition: background 0.2s ease;
-    }
-
-    .nav button:hover {
-      background: rgba(0, 0, 0, 0.6);
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 1.6rem;
-      }
-
-      .nav button {
-        font-size: 1.4rem;
-      }
-    }
-  </style>
-</head>
-
-<body>
-  <div class="background d-none d-md-block"></div>
-
-  <div class="container height-100">
-    <div class="content text-md-left">
-      <h1>Hobbies & Interests</h1>
-      <div class="slider">
-        <div class="slides" id="slides">
-          <!-- Slide 1 -->
-          <div class="slide">
-            <img src="Images/frisbee.jpg" alt="Frisbee">
-            <div class="caption">
-              <span class="text body">Playing guitar on lazy weekends</span>
+      <div className="grid grid-cols-1 md:grid-cols-3 gap-8">
+        {hobbies.map((hobby, index) => (
+          <div
+            key={index}
+            className="bg-white shadow-md rounded-2xl overflow-hidden transition-transform duration-300 hover:-translate-y-1 hover:shadow-lg"
+          >
+            <div className="h-56 bg-gray-200 flex items-center justify-center">
+              <img
+                src={hobby.image}
+                alt={hobby.title}
+                className="object-cover w-full h-full"
+              />
+            </div>
+            <div className="p-6">
+              <h3 className="text-sky-400 font-medium text-lg mb-2 tracking-wide">
+                {hobby.title}
+              </h3>
+              <p className="text-gray-600 text-[15px] leading-relaxed">
+                {hobby.description}
+              </p>
             </div>
           </div>
-
-          <!-- Slide 2 -->
-          <div class="slide">
-            <img src="Images/golf.jpg" alt="Golf">
-            <div class="caption">
-              <span class="text body">Hiking with friends</span>
-            </div>
-          </div>
-
-          <!-- Slide 3 -->
-          <div class="slide">
-            <img src="Images/cooking.jpg" alt="Cooking">
-            <div class="caption">
-              <span class="text body">Cooking homemade ramen</span>
-            </div>
-          </div>
-        </div>
-
-        <!-- Navigation Arrows -->
-        <div class="nav">
-          <button id="prev">&#10094;</button>
-          <button id="next">&#10095;</button>
-        </div>
+        ))}
       </div>
-    </div>
-  </div>
+    </section>
+  );
+};
 
-  <script>
-    const slides = document.getElementById('slides');
-    const prev = document.getElementById('prev');
-    const next = document.getElementById('next');
-    const total = slides.children.length;
-    let index = 0;
-
-    function updateSlide() {
-      slides.style.transform = `translateX(-${index * 100}%)`;
-    }
-
-    prev.addEventListener('click', () => {
-      index = (index - 1 + total) % total;
-      updateSlide();
-    });
-
-    next.addEventListener('click', () => {
-      index = (index + 1) % total;
-      updateSlide();
-    });
-
-    // Swipe for mobile
-    let startX = 0;
-    slides.addEventListener('touchstart', e => {
-      startX = e.touches[0].clientX;
-    });
-
-    slides.addEventListener('touchend', e => {
-      const diff = startX - e.changedTouches[0].clientX;
-      if (diff > 50) index = (index + 1) % total;
-      if (diff < -50) index = (index - 1 + total) % total;
-      updateSlide();
-    });
-  </script>
-</body>
-</html>
+export default HobbiesGallery;
