--- a/hobbies.html
+++ b/hobbies.html
@@ -1,59 +1,72 @@
-import React from "react";
+<section class="max-w-6xl mx-auto px-4 py-12">
+  <h2 class="text-3xl font-semibold mb-10 text-center">Beyond the Lab</h2>
 
-const HobbiesGallery = () => {
-  const hobbies = [
-    {
-      title: "Hiking & Nature",
-      description:
-        "Weekend hikes through trails around New England remind me to pause, breathe, and notice the quiet details—sunlight, rhythm, and balance.",
-      image: "/images/hiking.jpg",
-    },
-    {
-      title: "Piano",
-      description:
-        "I play classical and contemporary pieces, often late at night. It’s where structure meets emotion, and repetition feels like meditation.",
-      image: "/images/piano.jpg",
-    },
-    {
-      title: "Photography",
-      description:
-        "I love documenting fleeting light—faces, streets, and still moments. It’s how I train myself to see people and places with patience and care.",
-      image: "/images/photography.jpg",
-    },
-  ];
-
-  return (
-    <section className="max-w-6xl mx-auto px-4 py-12">
-      <h2 className="text-3xl font-semibold mb-10 text-center">
-        Beyond the Lab
-      </h2>
-
-      <div className="grid grid-cols-1 md:grid-cols-3 gap-8">
-        {hobbies.map((hobby, index) => (
-          <div
-            key={index}
-            className="bg-white shadow-md rounded-2xl overflow-hidden transition-transform duration-300 hover:-translate-y-1 hover:shadow-lg"
-          >
-            <div className="h-56 bg-gray-200 flex items-center justify-center">
-              <img
-                src={hobby.image}
-                alt={hobby.title}
-                className="object-cover w-full h-full"
-              />
-            </div>
-            <div className="p-6">
-              <h3 className="text-sky-400 font-medium text-lg mb-2 tracking-wide">
-                {hobby.title}
-              </h3>
-              <p className="text-gray-600 text-[15px] leading-relaxed">
-                {hobby.description}
-              </p>
-            </div>
-          </div>
-        ))}
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+    <!-- Hobby 1 -->
+    <div
+      class="bg-white shadow-md rounded-2xl overflow-hidden transition-transform duration-300 hover:-translate-y-1 hover:shadow-lg"
+    >
+      <div class="h-56 bg-gray-200 flex items-center justify-center">
+        <img
+          src="images/frisbee.jpg"
+          alt="Hiking & Nature"
+          class="object-cover w-full h-full"
+        />
       </div>
-    </section>
-  );
-};
+      <div class="p-6">
+        <h3 class="text-sky-400 font-medium text-lg mb-2 tracking-wide">
+          Hiking & Nature
+        </h3>
+        <p class="text-gray-600 text-[15px] leading-relaxed">
+          Weekend hikes through trails around New England remind me to pause,
+          breathe, and notice the quiet details—sunlight, rhythm, and balance.
+        </p>
+      </div>
+    </div>
 
-export default HobbiesGallery;
+    <!-- Hobby 2 -->
+    <div
+      class="bg-white shadow-md rounded-2xl overflow-hidden transition-transform duration-300 hover:-translate-y-1 hover:shadow-lg"
+    >
+      <div class="h-56 bg-gray-200 flex items-center justify-center">
+        <img
+          src="images/golf.jpg"
+          alt="Piano"
+          class="object-cover w-full h-full"
+        />
+      </div>
+      <div class="p-6">
+        <h3 class="text-sky-400 font-medium text-lg mb-2 tracking-wide">
+          Piano
+        </h3>
+        <p class="text-gray-600 text-[15px] leading-relaxed">
+          I play classical and contemporary pieces, often late at night. It’s
+          where structure meets emotion, and repetition feels like meditation.
+        </p>
+      </div>
+    </div>
+
+    <!-- Hobby 3 -->
+    <div
+      class="bg-white shadow-md rounded-2xl overflow-hidden transition-transform duration-300 hover:-translate-y-1 hover:shadow-lg"
+    >
+      <div class="h-56 bg-gray-200 flex items-center justify-center">
+        <img
+          src="images/cooking.jpg"
+          alt="Photography"
+          class="object-cover w-full h-full"
+        />
+      </div>
+      <div class="p-6">
+        <h3 class="text-sky-400 font-medium text-lg mb-2 tracking-wide">
+          Photography
+        </h3>
+        <p class="text-gray-600 text-[15px] leading-relaxed">
+          I love documenting fleeting light—faces, streets, and still moments.
+          It’s how I train myself to see people and places with patience and
+          care.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
