--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hobbies & Interests - Nawon Lee</title>
+  <title>Hobbies & Interests</title>
   <link rel="shortcut icon" type="image/png" href="Icons/nl-logo.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
@@ -38,7 +38,9 @@
 
     .gallery-item img {
       width: 100%;
-      height: auto;
+      height: 260px; /* consistent height for all images */
+      object-fit: cover; /* crops top/bottom as needed */
+      object-position: center top; /* slightly prioritizes top framing */
       border-radius: 6px;
       display: block;
     }
