--- a/hobbies.html
+++ b/hobbies.html
@@ -90,14 +90,14 @@
   <div class="container height-100">
     <div class="content text-md-left">
       <br><br><br>
-      <h1>#hobbies and interests</h1>
+      <h1>hobbies and interests</h1>
 
       <div class="gallery">
         <!-- Hobby 1 -->
         <div class="gallery-item">
           <img src="Images/frisbee.jpg" alt="Frisbee">
           <div class="caption">
-            <span class="text small-heading">2023 SPRING</span>
+            <span class="text small-heading">Ultimate Frisbee</span>
             <span class="text body">Playing frisbee on sunny afternoons</span>
           </div>
         </div>
@@ -106,8 +106,8 @@
         <div class="gallery-item">
           <img src="Images/golf.jpg" alt="Golf">
           <div class="caption">
-            <span class="text small-heading">2023 SUMMER</span>
-            <span class="text body">Weekend golf with friends</span>
+            <span class="text small-heading">Golf</span>
+            <span class="text body">Weekend golf with friends and family</span>
           </div>
         </div>
 
@@ -115,8 +115,8 @@
         <div class="gallery-item">
           <img src="Images/cooking.jpg" alt="Cooking">
           <div class="caption">
-            <span class="text small-heading">2023 WINTER</span>
-            <span class="text body">Experimenting with homemade ramen recipes</span>
+            <span class="text small-heading">Cooking</span>
+            <span class="text body">Experimenting with recipes</span>
           </div>
         </div>
       </div>
