--- a/hobbies.html
+++ b/hobbies.html
@@ -95,7 +95,7 @@
       <div class="gallery">
         <!-- Hobby 1 -->
         <div class="gallery-item">
-          <img src="Images/frisbee.jpg" alt="Frisbee">
+          <img src="Images/frisbee2.jpg" alt="Frisbee">
           <div class="caption">
             <span class="text small-heading">Ultimate Frisbee</span>
             <span class="text body">Playing frisbee on sunny afternoons</span>
@@ -104,7 +104,7 @@
 
         <!-- Hobby 2 -->
         <div class="gallery-item">
-          <img src="Images/golf.jpg" alt="Golf">
+          <img src="Images/golf2.jpg" alt="Golf">
           <div class="caption">
             <span class="text small-heading">Golf</span>
             <span class="text body">Weekend golf with friends and family</span>
@@ -113,7 +113,7 @@
 
         <!-- Hobby 3 -->
         <div class="gallery-item">
-          <img src="Images/cooking.jpg" alt="Cooking">
+          <img src="Images/cooking2.jpg" alt="Cooking">
           <div class="caption">
             <span class="text small-heading">Cooking</span>
             <span class="text body">Experimenting with recipes</span>
